Added map and styling

--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
   <title>Pokémon Map</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styling.css" />
+  <body>
+  <div id="map"></div>
+  <script src="map.js"></script></body>
 </head>
